--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ buildType=SNAPSHOT
 buildVersion=1.0.0
 buildRevision=0
 mcVersion=1.12.2
+mcfVersion=14.23.5.2768
 mcMappings=stable_39
 forgeGradleVersion=2.3-SNAPSHOT
-mixinGradleVersion=0.6-SNAPSHOT
