--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,6 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
-        maven {
-            name = 'sponge'
-            url = 'http://repo.spongepowered.org/maven'
-        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:' + project.forgeGradleVersion
@@ -46,8 +42,13 @@ repositories {
     flatDir {
         dir 'repo'
     }
+    maven {
+        name = "liteloader"
+        url = "http://repo.mumfrey.com/content/repositories/snapshots/"
+    }
 }
 dependencies {
+    deobfCompile 'com.mumfrey:liteloader:1.12.2-SNAPSHOT'
     deobfCompile('com.minelittlepony:minelittlepony:1.12.2.3c-mc1.12.2:srg')
 }
 
