--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-def ver = "${project.mcVersion}.${project.buildVersion}-${project.buildType}"
+def ver = "${project.mcVersion}-${project.buildVersion}-${project.buildType}"
 
 version = ver
 group = project.group
@@ -50,23 +50,4 @@ repositories {
 dependencies {
     deobfCompile 'com.mumfrey:liteloader:1.12.2-SNAPSHOT'
     deobfCompile('com.minelittlepony:minelittlepony:1.12.2.3c-mc1.12.2:srg')
-}
-
-// broken / never worked / Mumfrey pls stop giving us broken templates
-processResources {
-    def props = [
-        version: ver,
-        mcversion: project.mcVersion,
-        revision: project.buildRevision
-    ]
-    inputs.properties props
-    from(sourceSets.main.resources.srcDirs) {
-        include 'litemod.json'
-        expand props
-    }
-    
-    // copy everything else, thats not the litemod.json
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'litemod.json'
-    }
 }
